<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Inventory App</string>
    <string name="str_enter_product_name">Enter Product Name</string>
    <string name="str_enter_product_price">Enter Product Price</string>
    <string name="str_enter_product_quantity">Enter Quantity</string>
    <string name="str_enter_supplier_name">Supplier Name</string>
    <string name="str_enter_supplier_number">Supplier Number</string>
    <string name="dummy_data">Dummy Data</string>
    <string name="delete_all">Delete All</string>
    <string name="number_of_row">Number of rows in pets database table:</string>
    <string name="error_phone_number">Phone number can not be empty</string>
    <string name="good_error">Good</string>
    <string name="product_name_errror">Product Name can not be empty</string>
    <string name="price_error">Price can not be empty</string>
    <string name="quantity_error">Quantity can not be empty</string>
    <string name="supplier_name_error">Supplier Name can not be empty</string>
    <string name="error_in_data_insertion_str">Error with saving Product</string>
    <string name="data_insertion_sucessful_str">Product saved</string>
    <string name="todo">TODO</string>
    <string name="dummy_quantity">50</string>
    <string name="dummy_supplier">Xiaomi India pvt</string>
    <string name="dummy_phone">9453774862</string>
    <string name="tv_sale">Sale</string>
    <string name="dummy_cost">₹ 14,999</string>
    <string name="dummy_product_name">Mi A1</string>
    <string name="call">Call</string>
    <string name="empty_view_title_text">No item is available in stock</string>
    <string name="empty_view_subtitle_text">Start adding item by click on +</string>
    <string name="add_item_string">Add Item</string>
    <string name="edit_existing_item">Edit Item</string>
    <string name="editor_update_item_successful">Item updated</string>
    <string name="editor_update_item_failed">Error with updating Item</string>
    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>
    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>
    <string name="action_delete">Delete</string>
    <!-- Toast message in editor when current pet was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_pet_successful">Pet deleted</string>

    <!-- Toast message in editor when current pet has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_pet_failed">Error with deleting pet</string>

    <!-- Dialog message to ask the user to confirm deleting the current pet [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg" tools:ignore="ExtraTranslation">Delete this pet?</string>
    <!-- Dialog message to ask the user to confirm deleting the current pet [CHAR LIMIT=NONE] -->
    <string name="delete_all_dialog_msg">Do you want to delete All entries</string>

    <!-- Dialog button text for the option to confirm deleting the current pet [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>
    <string name="sale_button">sale button</string>
    <string name="editor_update_zero_item_failed">You have nothing to sale !!!</string>
    <string name="sale_update_item_successful">Item sale successful !!!</string>
    <string name="sale_update_item_failed">fail to sale item</string>
    <string name="action_editor">Edit</string>
    <string name="product_name_str">Product Name</string>
    <string name="details">Details</string>
    <string name="product_quantity_str">Quantity</string>
    <string name="product_price_str">Price</string>
    <string name="product_supplier_str">Supplier Name</string>
    <string name="product_supplier_number_str">Supplier Number</string>
    <string name="details_activity_title">Details</string>
    <string name="toast_msg">Permission is required to call</string>
    <string name="toast_msg_granted">Permission granted</string>
    <string name="toast_msg_deny">Permission denied</string>
    <string name="preview">preview</string>
    <string name="select_picture_label">Select Picture</string>
    <string name="permission_msg">Please Grant Permissions to access photos</string>
    <string name="warining_toast_str">Check Entries or upload Image again</string>
    <string name="conform">Conform</string>
    <string name="empty_list_view">empty list view</string>
    <string name="image">image</string>

</resources>
