<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#000">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8dp"
        app:cardBackgroundColor="#fff"
        app:cardCornerRadius="@dimen/margin_8dp"
        app:cardElevation="@dimen/margin_16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/product_image"
                android:layout_width="@dimen/image_width"
                android:layout_height="@dimen/image_height"
                android:layout_margin="@dimen/margin_8dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_launcher_foreground" />

            <TextView
                android:id="@+id/tv_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginLeft="@dimen/margin_8dp"
                android:layout_toEndOf="@id/product_image"
                android:layout_toRightOf="@id/product_image"
                android:text="@string/dummy_product_name" />

            <TextView
                android:id="@+id/tv_product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_product_name"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginLeft="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_4dp"
                android:layout_toEndOf="@id/product_image"
                android:layout_toRightOf="@id/product_image"
                android:text="@string/dummy_cost" />

            <TextView
                android:id="@+id/tv_product_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_product_price"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginLeft="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_4dp"
                android:layout_toEndOf="@id/product_image"
                android:layout_toRightOf="@id/product_image"
                android:text="@string/dummy_quantity" />

            <TextView
                android:id="@+id/tv_product_supplier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_product_quantity"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginLeft="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_4dp"
                android:layout_toEndOf="@id/product_image"
                android:layout_toRightOf="@id/product_image"
                android:text="@string/dummy_supplier" />

            <TextView
                android:id="@+id/tv_product_supplier_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_product_supplier"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginLeft="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_4dp"
                android:layout_toEndOf="@id/product_image"
                android:layout_toRightOf="@id/product_image"
                android:text="@string/dummy_phone" />



        </RelativeLayout>


    </android.support.v7.widget.CardView>


</RelativeLayout>