<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EditorActivity"
    tools:layout_editor_absoluteY="81dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/preview"
            style="@style/PreViewImage"
            android:contentDescription="@string/preview"
            android:src="@drawable/ic_image_plus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_layout"
            style="@style/InputText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/preview">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_product_name"
                style="@style/InputTextEditor"
                android:hint="@string/str_enter_product_name"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_layout_price"
            style="@style/InputText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_layout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_product_price"
                style="@style/InputTextEditor"
                android:hint="@string/str_enter_product_price"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/save_fab"
            style="@style/FabAddNewItem"
            android:layout_marginBottom="@dimen/margin_16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_content_save"
            tools:ignore="VectorDrawableCompat" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/sign_in_email_layout"
            style="@style/InputText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_layout_price">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_product_quantity"
                style="@style/InputTextEditor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_enter_product_quantity"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/sign_in_email_layout1"
            style="@style/InputText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_email_layout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_supplier_name"
                style="@style/InputTextEditor"
                android:hint="@string/str_enter_supplier_name"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/InputText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_email_layout1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_supplier_phone"
                style="@style/InputTextEditor"
                android:hint="@string/str_enter_supplier_number"
                android:inputType="phone"
                android:maxLength="10" />


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_minus"
            style="@style/QuantityUpDownBtn"
            app:layout_constraintBottom_toTopOf="@+id/sign_in_email_layout1"
            app:layout_constraintEnd_toStartOf="@+id/sign_in_email_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_layout_price"
            app:srcCompat="@drawable/ic_minus"
            tools:ignore="VectorDrawableCompat" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_plus"
            style="@style/QuantityUpDownBtn"
            app:layout_constraintBottom_toTopOf="@+id/sign_in_email_layout1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toEndOf="@+id/sign_in_email_layout"
            app:layout_constraintTop_toBottomOf="@+id/text_layout_price"
            app:layout_constraintVertical_bias="0.49"
            app:srcCompat="@drawable/ic_plus"
            tools:ignore="VectorDrawableCompat" />


    </android.support.constraint.ConstraintLayout>

</ScrollView>