<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.hasanzian.inventoryapp.activity.EditorActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@null"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/toolbarImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    tools:src="@color/colorAccent" />

            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            style="@style/LinearLayoutDetailInfo"
            android:orientation="vertical">

            <TextView
                android:id="@+id/headertext"
                style="@style/Header"
                android:text="@string/details" />

            <android.support.v7.widget.CardView
                style="@style/CardViewDetailInfo"
                app:cardBackgroundColor="@color/colorWhite">

                <LinearLayout style="@style/LinearLayoutDetailInfo">

                    <ImageView
                        android:id="@+id/icon_1"
                        style="@style/ImageViewCommon"
                        android:src="@drawable/ic_information" />

                    <LinearLayout
                        style="@style/LinearLayoutDetailInfo"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_product_name_header"
                            style="@style/TextViewCommon"
                            android:text="@string/product_name_str" />

                        <TextView
                            android:id="@+id/tv_product_name_current"
                            style="@style/TextViewCommon"
                            android:layout_marginTop="4dp"
                            tools:text="Mi A1" />

                        <View style="@style/ViewDivider" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/CardViewDetailInfo"
                app:cardBackgroundColor="@color/colorWhite">

                <LinearLayout style="@style/LinearLayoutDetailInfo">

                    <ImageView
                        android:id="@+id/price"
                        style="@style/ImageViewCommon"
                        android:src="@drawable/ic_currency_usd" />

                    <LinearLayout
                        style="@style/LinearLayoutDetailInfo"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_product_price_header"
                            style="@style/TextViewCommon"
                            android:text="@string/product_price_str" />

                        <TextView
                            android:id="@+id/tv_product_price_current"
                            style="@style/TextViewCommon"
                            android:layout_marginTop="4dp"
                            tools:text="₹ 15,999" />

                        <View style="@style/ViewDivider" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                style="@style/CardViewDetailInfo"
                app:cardBackgroundColor="@color/colorWhite">

                <LinearLayout style="@style/LinearLayoutDetailInfo">

                    <ImageView
                        android:id="@+id/quantity"
                        style="@style/ImageViewCommon"
                        android:src="@drawable/ic_counter" />

                    <LinearLayout
                        style="@style/LinearLayoutDetailInfo"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_product_quantity_header"
                            style="@style/TextViewCommon"
                            android:text="@string/product_quantity_str" />

                        <TextView
                            android:id="@+id/tv_product_quantity_current"
                            style="@style/TextViewCommon"
                            android:layout_marginTop="4dp"
                            tools:text="100" />

                        <View style="@style/ViewDivider" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/CardViewDetailInfo"
                app:cardBackgroundColor="@color/colorWhite">

                <LinearLayout style="@style/LinearLayoutDetailInfo">

                    <ImageView
                        android:id="@+id/supplier"
                        style="@style/ImageViewCommon"
                        android:src="@drawable/ic_domain" />

                    <LinearLayout
                        style="@style/LinearLayoutDetailInfo"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_product_supplier_header"
                            style="@style/TextViewCommon"
                            android:text="@string/product_supplier_str" />

                        <TextView
                            android:id="@+id/tv_product_supplier_current"
                            style="@style/TextViewCommon"
                            android:layout_marginTop="4dp"
                            tools:text="Xiaomi Ltd." />

                        <View style="@style/ViewDivider" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/dial_phone"
                style="@style/CardViewDetailInfo"
                app:cardBackgroundColor="@color/colorWhite">

                <LinearLayout style="@style/LinearLayoutDetailInfo">

                    <ImageView
                        android:id="@+id/phone"
                        style="@style/ImageViewCommon"
                        android:src="@drawable/ic_phone" />

                    <LinearLayout
                        style="@style/LinearLayoutDetailInfo"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_product_supplier_number_header"
                            style="@style/TextViewCommon"
                            android:text="@string/product_supplier_number_str" />

                        <TextView
                            android:id="@+id/tv_product_supplier_number_current"
                            style="@style/TextViewCommon"
                            android:layout_marginTop="4dp"
                            tools:text="+91 860464637" />

                        <View style="@style/ViewDivider" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_editor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/margin_24dp"
        android:src="@drawable/ic_pencil"
        app:layout_anchor="@id/appBar"
        app:layout_anchorGravity="bottom|end" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_invisible"
        android:layout_width="@dimen/margin_24dp"
        android:layout_height="@dimen/margin_24dp"
        android:layout_gravity="top|end"
        android:layout_margin="@dimen/margin_24dp"
        android:visibility="invisible"
        app:layout_anchor="@id/fab_editor"
        app:layout_anchorGravity="top" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_margin="@dimen/margin_24dp"
        android:src="@drawable/ic_phone"
        app:backgroundTint="@android:color/white"
        app:layout_anchor="@id/fab_invisible"
        app:layout_anchorGravity="top" />

</android.support.design.widget.CoordinatorLayout>